fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ img::selection {
 
 #time {
     right: 2vw;
-    transform: translateY(0.3vh);
+    transform: translateY(-0.3vh);
     position: fixed;
     z-index: 1;
 }
@@ -29,11 +29,14 @@ img::selection {
     grid-template-columns: repeat(6, 1fr); /* Three equal-width columns */
     gap: 1vw; /* Spacing between grid items */
     row-gap: 2vw;
-    width: 100%; /* Full container width */
-    margin-top: 1vw;
+    max-width: 100%;
+    margin: 1vw;
+    margin-right: 1vw;
 }
 #letterhead {
-    margin-left:0;
+    margin-left:1vw;
+    margin-top: 2vw;
+    margin-right: 1vw;
 }
 .text-container {
     display: flex;
